--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 }
 body {
   width: 100%;
+  margin: 0;
   line-height: 1.5;
   background-color: #ececec;
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -28,7 +29,7 @@ i {
 /* container */
 .container {
   width: 960px;
-  margin: 10px auto 50px;
+  margin: 15px auto;
   border-radius: 5px;
   background-color: #39a9db;
   overflow: hidden;
@@ -121,4 +122,13 @@ i {
   border: 1px solid #39a9db;
   color: #fff;
   text-shadow: 0 0 1px #ddd;
+}
+
+@media screen and (max-width: 767px) {
+  .container, .sidebar, .main {
+    width: 100%;
+  }
+  .container {
+    margin: 0;
+  }
 }
