--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ i {
   height: 70px;
   text-shadow: 1px 1px #39a9db,2px 2px #bbb;
 }
-.sidebar-info{
+.sidebar-info {
   margin: 15px;
 }
 .sidebar-info-item > dt {
@@ -87,6 +87,21 @@ i {
   padding: 20px 30px 20px 20px;
   background-color: #fff;
   color: #333;
+}
+.main > a {
+  float: right;
+  width: 78px;
+  height: 30px;
+  line-height: 29px;
+  background-color: #39a9db;
+  border: 1px solid #39a9db;
+  color: #fff;
+  border-radius: 3px;
+  text-align: center;
+}
+.main > a:hover {
+  box-shadow: 1px 1px 2px #999;
+  text-shadow: 0 0 1px #ddd;
 }
 .main > h2 {
   padding: 13px 0 8px 5px;
