--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ i {
   margin-right: 5px;
 }
 
-/* container */
+/* container，整个页面 */
 .container {
   width: 960px;
   margin: 15px auto;
@@ -36,7 +36,7 @@ i {
   box-shadow: 0 0 5px #999;
 }
 
-/* sidebar */
+/* sidebar，左边栏 */
 .sidebar {
   float: left;
   width: 290px;
@@ -44,7 +44,8 @@ i {
   line-height: 2.5;
   color: #efefef;
 }
-.sidebar > img {
+/*头像*/
+img {
   display: block;
   width: 150px;
   height: 150px;
@@ -52,7 +53,8 @@ i {
   border: 5px solid #eee;
   border-radius: 50%;
 }
-.sidebar > h1 {
+/*名字*/
+h1 {
   text-align: center;
   margin: 0 auto;
   height: 70px;
@@ -61,22 +63,22 @@ i {
 .sidebar-info {
   margin: 15px;
 }
-.sidebar-info-item > dt {
+.sidebar-dt {
   height: 43px;
   padding-left: 5px;
   font-size: 18px;
   color: #efefef;
   text-shadow: 2px 2px 0 #bbb;
 }
-.sidebar-info-item > dd {
+.sidebar-dd {
   margin-left: 0;
   font-weight: 200;
   border-bottom: 1px dashed #555;
 }
-.sidebar-info-item > dd > i {
+.sidebar-i {
   margin-right: 10px;
 }
-.sidebar-info-item > dd > a:hover {
+.sidebar-a:hover {
   text-decoration: underline;
 }
 
@@ -88,7 +90,8 @@ i {
   background-color: #fff;
   color: #333;
 }
-.main > a {
+/*下载链接*/
+#download {
   float: right;
   width: 78px;
   height: 30px;
@@ -99,27 +102,30 @@ i {
   border-radius: 3px;
   text-align: center;
 }
-.main > a:hover {
+#download:hover {
   box-shadow: 1px 1px 2px #999;
   text-shadow: 0 0 1px #ddd;
 }
-.main > h2 {
+h2 {
   padding: 13px 0 8px 5px;
   border-bottom: 1px dashed #555;
   text-align: left;
 }
-.main-item > dt {
+.main-dt {
   display: inline;
   font-size: 17px;
   font-weight: 600;
 }
-.main-item > dd {
+.main-dd {
   margin: 10px 0 15px 0;
 }
-.main-item > dd > p {
+.main-ul{list-style-type: disc;}
+.main-li {
   margin: 8px auto 8px 33px;
 }
-.main-item > dd > p > a {
+/*项目信息下的code和demo链接*/
+.project-button{margin: 8px auto 8px 33px;}
+.project-a {
   display: inline-block;
   font-size: 15px;
   width: 50px;
@@ -128,17 +134,17 @@ i {
   margin: 5px 5px 5px 0;
   text-align: center;
 }
-.main-item > dd > p > a:last-child {
+.project-a:last-child {
   margin-left: 5px;
 }
-.main-item > dd > p > a:hover {
+.project-a:hover {
   box-shadow: 1px 1px 2px #999;
   background-color: #39a9db;
   border: 1px solid #39a9db;
   color: #fff;
   text-shadow: 0 0 1px #ddd;
 }
-
+#mooc{color: #39a9db;}
 @media screen and (max-width: 767px) {
   .container, .sidebar, .main {
     width: 100%;
@@ -147,3 +153,5 @@ i {
     margin: 0;
   }
 }
+strong{font-weight: 700; color: teal;}
+.score{color: inherit;}
