增加了项目信息和技能

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   line-height: 1.5;
   background-color: #ececec;
+  font-family: "Open Sans","Helvetica Neue", Helvetica,Arial,sans-serif;
 }
 a {
   color: inherit;
@@ -130,13 +131,13 @@ h2 {
   width: 50px;
   border: 1px solid #666;
   border-radius: 3px;
-  margin: 5px 5px 5px 0;
   text-align: center;
 }
 .project-a:last-child {
   margin-left: 5px;
 }
 .project-a:hover {
+  /*box-shadow: h-shadow v-shadow blur(模糊距离) spread(阴影尺寸) color inset;*/
   box-shadow: 1px 1px 2px #999;
   background-color: #39a9db;
   border: 1px solid #39a9db;
